--- a/pathnames.h.in
+++ b/pathnames.h.in
@@ -24,8 +24,14 @@
 /* The default file for hostname completion. */
 #define DEFAULT_HOSTS_FILE "/etc/hosts"
 
+/* The Stateless file for hostname completion. */
+#define STATLESS_HOSTS_FILE "/usr/etc/hosts"
+
 /* The default login shell startup file. */
 #define SYS_PROFILE "/etc/profile"
+
+/* The stateless login shell startup file. */
+#define STATLESS_SYS_PROFILE "/usr/etc/profile"
 
 /* The default location of the bash debugger initialization/startup file. */
 #define DEBUGGER_START_FILE	"@DEBUGGER_START_FILE@"
